# hhvm

hphp/hack/src/: .gitignore  dune
hphp/hack/src/annotated_ast/: dune
hphp/hack/src/client/: dune
hphp/hack/src/decl/: decl_pos_utils.ml
hphp/hack/src/dfind/: dune
hphp/hack/src/diff/: dune
hphp/hack/src/errors/: dune  errors_sig.ml
hphp/hack/src/facts/: dune
hphp/hack/src/find/: dune  find.ml
hphp/hack/src/fsevents/: dune
hphp/hack/src/fsnotify_darwin/: dune
hphp/hack/src/fsnotify_linux/: dune
hphp/hack/src/gen_deps/: dune
hphp/hack/src/globals/: dune
hphp/hack/src/hackfmt/: dune
hphp/hack/src/heap/: dune
hphp/hack/src/hhbc/: dune
hphp/hack/src/hhi/: dune
hphp/hack/src/injection/: dune
hphp/hack/src/libancillary/: dune
hphp/hack/src/monitor/: dune
hphp/hack/src/naming/: naming_special_names.ml
hphp/hack/src/options/: dune
hphp/hack/src/parser/: dune
hphp/hack/src/ppx/: dune  ppx_gen_hhi.ml
hphp/hack/src/procs/: dune  worker.mli
hphp/hack/src/search/: dune
hphp/hack/src/server/: dune
hphp/hack/src/socket/: dune
hphp/hack/src/stubs/: dune
hphp/hack/src/typing/: dune  typing.ml
hphp/hack/src/utils/: dune  file_content.ml  file_url.ml  php_escaping.ml  utils.ml
hphp/hack/src/utils/sys/: sys_utils.ml
hphp/hack/src/watchman/: dune
hphp/hack/src/watchman_event_watcher/: dune
