(* -*- tuareg -*- *)

module J = Jbuild_plugin.V1

let list_dirs dir = Array.to_list (Sys.readdir dir)

let keep_file f =
  List.exists (Filename.check_suffix f) [ ".ml"; ".mli"; ".c" ]

let list_files dir =
  List.map (fun f -> dir, f) (List.filter keep_file (list_dirs dir))

let subdirs = 
  "../decl" ::
  List.filter Sys.is_directory (list_dirs ".")

let files = List.flatten (List.map list_files subdirs)

let copy_rule (dir, file) =
  Printf.sprintf "(rule (copy# \"%s/%s\" \"%s\"))" dir file file

let copy_rules = String.concat "\n" (List.map copy_rule files)

;; Printf.ksprintf J.send {|
%s

(rule (copy# ../ide_rpc/ide_api_types.ml ide_api_types.ml))

(library
 (name hh_typing)
 (libraries hh_errors hh_multiworker hh_options hh_utils hh_parser hh_stubs hh_hackfmt)
 (preprocess (pps ppx_deriving.std))
 (flags (:standard -w -6))
 (modules_without_implementation typing_env_types_sig typing_instantiate)
 (wrapped false))

|} copy_rules
